--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akupunktura - Medycyna Chińska, dietetyka, ziołolecznictwo w Złotowie</title>
 
+    <script>
 
+    </script>
+
+    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.min.css">
 </head>
 
@@ -1064,21 +1068,19 @@
             </div>
         </div>
 
-
-
-
-
     </section>
 
-    <section class="opinion" id="opinion">
 
+
+
+
+    <section class="opinion" id="opinion">
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path fill="#f6f6f6" fill-opacity="1"
                 d="M0,192L48,176C96,160,192,128,288,101.3C384,75,480,53,576,80C672,107,768,181,864,181.3C960,181,1056,107,1152,69.3C1248,32,1344,32,1392,32L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
             </path>
         </svg>
-
 
         <div class="wrapper">
             <div class="offer__title-center">
@@ -1089,10 +1091,149 @@
             <div class="opinion__container">
 
 
+                <div id="image-carousel" class="splide" aria-label="Opinie o Medycyna Chińska Michalina Marciniak">
+                    <div class="splide__track">
+                        <div class="splide__list">
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Zaczęłam korzystać z usług Pani Michaliny z powodu torbieli na jajniku oraz problemów związanych ze stresem. Po kilku wizytach akupunktury okazało się, że torbiel znacznie się zmniejszyła a po kilku następnych zniknęła całkowicie. Problemy ze stresem również się ustabilizowały i jest go znacznie mniej w moim życiu. Pani Michalina jest bardzo miłą osobą z dużą wiedzą. Bardzo polecam!"</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Chciałbym podzielić się moimi odczuciami po akupunkturze. Moje samopoczucie psychiczne jak i fizyczne jest o wiele lepsze. A największą niespodzianką i zaskoczeniem jest to iż od ponad 10 lat moja żona nie mogła zajść w ciążę, a po kilku wizytach u Pani okazało się, że będziemy rodzicami".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>To dosłownie!
+                                        Rwa kulszowa która złapała mnie jakoś w 4 miesiącu ciąży i utrzymywała się przez cały jej okres, a także po niej... Nie pomagały mi masaże u fizjoterapeutów, nie pomagały mi ćwiczenia, tabletek wziąć nie mogłam bo karmie piersia więc tak chodziłam z tym bólem i myślałam że tak musi być, że to przejdzie samo skoro fizjoterapeuci nie dają rady. Jestem 7 miesiecy po porodzie i po 4 wizytach u Pani w gabinecie, już po 3 była REWELACJA pierwszy raz od dłuuuugiego czasu nic mnie nie boli.
+                                        Dzisiejsza wizyta utwierdzila mnie w tym że dobrze zrobiłam decydując się na akupunkturę.
+                                        Przy okazji oprócz dolegliwości bólowych związanych z rwa, udało się też pomoc na bolesne miesiączki, taki efekt uboczny.
+                                        Dziękuję raz jeszcze i mimo cudownej atmosfery w gabinecie mam nadzieję że nie do szybkiego zobaczenia, no chyba że przyjdę się zrelaksować po nieprzespanej nocy”.
+                                        </p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>„Akupunktura potrafi czynić cuda na problemy skórne. Na zabiegi trafiłam zupełnie z innego powodu, jednak od lat borykałam się z różnego rodzaju wypryskami i nie pomagały na dłuższa metę żadne terapie... po serii zabiegów okazało się, że moja skóra jest zdrowa i gładka, a efekt jest długotrwały".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>„Uczęszczam na zabiegi akupunktury od jakiegoś czasu. Po każdym z nich czuję ustępowanie objawów bólowych i napięciowych. Moje ciało staje się rozluźnione i czuję dużo spokoju. To bardzo przyjemny stan. Regularność w sesjach sprawia, że stan ten się wydłuża w czasie a mój komfort fizyczny I psychiczny wzrasta. Po prostu chce się żyć.”</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>„Pierwszy raz na akupunkturę poszłam w kwietniu, trochę się bałam jak to będzie, czy będzie bolało, czy to pomoże.... pomogło!!!!! Oczywiście zapisałam się na serię zabiegów. Nieraz bolały nakłucia, nieraz nie, nieraz były nieprzyjemne, ale za każdym razem były inne odczucia i zmiany. Jelita zaczęły inaczej pracować. Ustąpił ból w szyi, z którym borykałam się długi czas i jest moim punktem zapalnym organizmu. Lepszy przepływ krwi a tym samym mocniejszy organizm, sprawniejszy. Przy moim schorzeniu spada odczuwalność ciepła, a po rozgrzaniu i nakłuciu nie musiałam już spać w skarpetkach i najgrubszych pidżamach. Jeśli występuje ból mojego chorego kręgosłupa, proszę o wizytę, idę i ból ustępuje. Dla mnie akupunktura oraz zalecenia Pani Michaliny, przesympatycznej osoby, z dużą wiedzą i charyzmą, o wiele wzmocniły mój organizm, pozbawiły go niejednokrotnie bólu. Polecam każdemu w 100 %, nie wyobrażam sobie już mojej rehabilitacji bez tych zabiegów”.</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>„Po zabiegu uczucie spokoju i odprężenia! Polecam! :)”</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>„Moje sceptycznie podejście do akupunktury nie spowodowało (i całe szczęście) braku procesów, które zadziały się we mnie. Doświadczyłam różnych, ale jakże dobrych i potrzebnych stanów dzięki "igiełkom"...</p>
+                                    <ul>
+                                        <li>zlikwidowany ból kolana</li>
+                                        <li>zmniejszenie łaknienia</li>
+                                        <li>bardzo dobre samopoczucie: chillout</li>
+                                        <li>wyciszenie</li>
+                                        <li></li>równowaga energetyczna w ciele</li>
+                                        <li>dobry sen</li>
+                                    </ul>
+                                    <p>
+                                        To bardzo dobra inwestycja... i taki też dobry odruch... zanim udam się do lekarza, najpierw moje myśli kierują się w stronę tej metody... za myślami idzie realizacja...
+                                        Pozwólcie sobie na taki komfort... takie doświadczenie”.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Po wczorajszym zabiegu wstąpiła we mnie energia i radość, dziękuję!".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Po naszej wczorajszej sesji bardzo dobrze spałam, czuje się zrelaksowana i odprężona, w moim brzuszku jest spokój. Dziękuję".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Nagły kryzys, zapalenie pęcherza moczowego i mega ciężki dzień przed Tobą... i nic nie pomaga. Polecam magiczne igły Michaliny, po 5 minutach zapomniałam o bólu, i o tym że nie wiem jak przetrwam ten dzień. Pęcherz wspomagany ziołami wyleczył się do końca dnia".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Bardzo chciałam podziękować za ostatni zabieg na wyregulowanie układu nerwowego. Już na kozetce poczułam jego moc w postaci rozluźnienia mięśni karku i barków, a po zabiegu przyszedł spokój i przyjemne wyciszenie. Sen był głęboki i dłuższy niż zwykle. To bardzo przyjemne efekty, życie staje się weselsze. Dziękuję".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Chciałam podziękować za pomoc z zatokami! Zioła w połączeniu z akupunkturą to był strzał w dziesiątkę. Bardzo Pani dziękuję, w końcu mogę się schylić głową w dół i nie czuje, że rozsadzi mi głowę. Dziękuję za pomoc!"</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Jestem zachwycony efektem pierwszego zabiegu, w końcu nie marzną mi stopy. Szok, że tak szybko pomogło".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Czy to w ogóle zadziała. Idąc na zabieg do Michaliny biłam się z myślami czy mi to pomoże. Po pierwszym zabiegu zwolnienie napięcia w ramieniu, a po drugim ustąpienie bólu. A więc działa! Jaka ulga. Dziękuję Michalina Tobie i Twoim igiełkom za poprawę mojego samopoczucia i życia. Żałuję tylko, że tak późno!"</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Czuje się zrelaksowana i radosna, dobrze spałam i nie bolał mnie brzuch. Czuje spokój i radość w sercu, a w brzuchu nawet ciepło i motylki. Cały czas się uśmiecham. Dziękuję!"</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Niesamowite było, że jak za dotknięciem różdżki po igiełkach ucisk żołądka minął po kilku sekundach".</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Nie wiem jaki to cud się wydarzył ale śmiało mogę powiedzieć, że wstałam dziś czując jakiś wewnętrzny spokój i jakbym ważyła o połowę mniej. Na prawdę dawno nie czułam się tak dobrze rano. Dziękuję!"</p>
+                                </div>
+                            </div>
+
+                            <div class="splide__slide">
+                                <div class="splide__container">
+                                    <p>"Samopoczucie cudne! Ciało mówi, że dziękuje za zabieg. To był dopiero pierwszy raz, a co to będzie dalej? Jestem bardzo zadowolona".</p>
+                                </div>
+                            </div>
 
 
 
 
+
+
+                        </div>
+                    </div>
+                </div>
 
 
 
@@ -1104,18 +1245,13 @@
             </div>
         </div>
 
-
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="opinion__svg-bottom">
             <path fill="#f6f6f6" fill-opacity="1"
                 d="M0,64L48,106.7C96,149,192,235,288,234.7C384,235,480,149,576,133.3C672,117,768,171,864,170.7C960,171,1056,117,1152,106.7C1248,96,1344,128,1392,144L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
             </path>
         </svg>
 
-
-
     </section>
-
-
 
 
 
@@ -1278,11 +1414,6 @@
                         </a>
                     </div>
                 </div>
-
-
-
-
-
 
             </div>
         </div>
@@ -2245,7 +2376,32 @@
 
 </footer>
     
-
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <!-- <scirpt type="text/javascript">
+        var splide = new Splide( '.splide', {
+            perPage: 4,
+            perMove: 1,
+            gap    : '1.5rem',
+            padding: '3rem',
+            type: 'loop',
+            drag: 'free',
+            snap: true,
+            autoplay: true,
+            breakpoints: {
+              640: {
+                perPage: 2,
+                gap    : '.7rem',
+              },
+              480: {
+                perPage: 1,
+                gap    : '.7rem',
+              },
+            },
+          } );
+          
+          splide.mount();
+    </scirpt> -->
+    <script src="dist/js/splide-carousel.min.js"></script>
     <script src="dist/js/main.min.js"></script>
 </body>
 
