--- a/szkolenia-akupunktura.html
+++ b/szkolenia-akupunktura.html
@@ -131,10 +131,10 @@
         </div>
 
         <div class="trainings-main__container">
-            <div class="wrapper-inside">
+            <div class="trainings-main__content-container">
 
                 <div class="trainings-main__box">
-                    <h2 class="trainings-main__title">Serdecznie zapraszamy na kurs z podstaw dietetyki
+                    <h2 class="trainings-main__title">Serdecznie zapraszam na kurs z podstaw dietetyki
                         wg Tradycyjnej Medycyny Chińskiej!
                     </h2>
 
@@ -150,6 +150,8 @@
                         ich
                         znajomość nie jest konieczna do udziału w kursie.
                     </p>
+
+                    <span class="trainings-main__break-line"></span>
 
                     <h3 class="h3-title-subsections">Program kursu</h3>
 
@@ -182,13 +184,310 @@
                         <li>Dostosowanie zaleceń do indywidualnej konstytucji pacjenta</li>
                     </ul>
 
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__info-box">
+
+                        <div class="trainings-main__schedule">
+                            <h3 class="h3-title-subsections">Harmonogram</h3>
+                            <p class="trainings-main__content-without-space">Sobota 9.00 – 17.00 z przerwą obiadową</p>
+                            <p class="trainings-main__content-without-space">Niedziela 9.00 – 15.00 bez przerwy
+                                obiadowej</p>
+
+                        </div>
+
+                        <div class="trainings-main__location">
+                            <h3 class="h3-title-subsections">Lokalizacja</h3>
+                            <p class="trainings-main__content-without-space trainings-main__addres">
+                                <span>Gabinet Akupunktury Michalina Marciniak</span>
+                                <span>ul. ks. dr B. Domańskiego 14A (1 piętro)</span>
+                                <span>77-400 Złotów</span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__price">
+                        <h3 class="h3-title-subsections">cena</h3>
+                        <p class="trainings-main__content-without-space">Koszt kursu: 1300zł</p>
+                        <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
+                            zawiera materiały szkoleniowe: skrypt do zajęć, obiad, przekąski, oraz napoje ciepłe i
+                            zimne.
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                        </p>
+
+                    </div>
+
+                    <span
+                        class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
+                    <p class="trainings-main__text">Serdecznie zapraszamy wszystkich, którzy chcą zapoznać się z
+                        Medycyną Chińską!
+                        Kurs z dietetyki wg TCM jest do tego idealną możliwością, poznajemy tu kolejno teorię medycyny
+                        chińskiej i jej tajniki, zalecenia odpowiednie dla danego zaburzenia oraz praktyczne podejście
+                        do gotowania.
+                    </p>
                 </div>
 
 
-                <img src="dist/img/trainings.png" class="trainings-main__img" alt="Michalina Marciniak, Akupunktura Złotów">
+
+
+
+
+                <div class="trainings-main__box">
+                    <h2 class="trainings-main__title">Zapraszam serdecznie na kurs akupunktury brzucha!
+                    </h2>
+
+                    <p class="trainings-main__text">
+                        Akupunktura brzucha (Abdominal Acupuncture) została rozwinięta w Chinach w ostatnich dwóch
+                        dekadach, a jej popularność w świecie stale rośnie.
+                        Teoria akupunktury brzucha zakłada, że system meridianów brzucha (AMS – Abdominal Meridian
+                        System) wraz z punktem Shenque REN 8 (pępek) w jego centrum tworzy podstawowy system regulacyjny
+                        ciała człowieka.
+
+                        Akupunktura brzucha to mikrosystem w którym określone punkty i obszary brzucha odpowiadają
+                        odpowiednim częściom ciała.
+                        Zalety: zabiegi na brzuchu są praktycznie bezbolesne i przynoszą szybkie rezultaty, a metoda
+                        jest łatwa do nauczenia się.
+
+                        Podczas dwu dniowego szkolenia nauczysz się całego systemu akupunktury brzucha: zastosowania
+                        protokołów równoważących, oraz wykorzystania metody do problemów bólowych i chorób wewnętrznych.
+                    </p>
+
+                    <span class="trainings-main__break-line"></span>
+
+                    <h4 class="trainings-main__h4">Akupunkturę brzucha można zastosować na dolegliwości takie jak:</h4>
+                    <ul class="trainings-main__ul-list">
+                        <li>migreny</li>
+                        <li>zawroty głowy</li>
+                        <li>bezsenność</li>
+                        <li>astma</li>
+                        <li>zaburzenia trawienia, IBS – zespół jelita drażliwego</li>
+                        <li>bóle szyi, barku, łokcia</li>
+                        <li>bóle lędźwiowe, rwa kulszowa</li>
+                        <li>bóle kostek i kolan</li>
+                        <li>neuralgia kończyn dolnych, neuralgia nerwu twarzowego</li>
+                        <li>choroba Parkinsona</li>
+                        <li>fibromialgia, zespół przewlekłego zmęczenia</li>
+                        <li>problemy ginekologiczne, menopauza</li>
+                    </ul>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top-bottom"></span>
+
+                    <h3 class="h3-title-subsections">Program kursu</h3>
+
+                    <ul class="trainings-main__ul-list">
+                        <li>wprowadzenie do akupunktury brzucha</li>
+                        <li>techniki nakłuwania</li>
+                        <li>omówienie punktów stosowanych w metodzie, charakterystyka działania punktów</li>
+                        <li>lokalizacja punktów akupunktury</li>
+                        <li>podstawowe protokoły równoważące stosowane w akupunkturze brzucha</li>
+                        <li>zastosowanie akupunktury brzucha na dolegliwości bólowe</li>
+                        <li>zastosowanie akupunktury brzucha na choroby i problemy wewnętrzne</li>
+
+                    </ul>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__info-box">
+
+                        <div class="trainings-main__schedule">
+                            <h3 class="h3-title-subsections">Harmonogram</h3>
+                            <p class="trainings-main__content-without-space">Sobota 10.00 – 18.00</p>
+                            <p class="trainings-main__content-without-space">Niedziela 9.00 – 16.00</p>
+
+                        </div>
+
+                        <div class="trainings-main__location">
+                            <h3 class="h3-title-subsections">Lokalizacja</h3>
+                            <p class="trainings-main__content-without-space trainings-main__addres">
+                                <span>Gabinet Akupunktury Michalina Marciniak</span>
+                                <span>ul. ks. dr B. Domańskiego 14A (1 piętro)</span>
+                                <span>77-400 Złotów</span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__price">
+                        <h3 class="h3-title-subsections">cena</h3>
+                        <p class="trainings-main__content-without-space">Koszt kursu: 1700zł</p>
+                        <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
+                            zawiera materiały szkoleniowe: skrypt do zajęć, igły, obiad każdego dnia, przekąski, oraz
+                            napoje ciepłe i zimne.
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                        </p>
+                    </div>
+
+                    <span
+                        class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
+
+                    <p class="trainings-main__text">Grupa: 6-8 osób, ćwiczymy w małej kameralnej grupie.
+                    </p>
+                </div>
+
+
+
+
+
+
+                <div class="trainings-main__box">
+                    <h2 class="trainings-main__title">Zapraszam serdecznie na warsztat ze stawiania baniek chińskich i
+                        masażu gua sha!
+                    </h2>
+
+                    <h4 class="trainings-main__h4">Podczas szkolenia dowiesz się:</h4>
+                    <ol class="trainings-main__ul-list">
+                        <li>Czym jest terapia bańką chińską oraz gua sha.</li>
+                        <li>Jakie są rodzaje baniek i techniki ich stawiania.</li>
+                        <li>Jak zastosować bańki i gua sha na powszechne i codziennych dolegliwości: przeziębienie,
+                            infekcja, wzmocnienie po chorobie, bóle w ciele.</li>
+                        <li>Nauczysz się stawiania baniek próżniowych, ogniowych oraz wykonywania prostej techniki
+                            masażu gua sha na stan ostry – przeziębienie i infekcja, oraz gua sha na dolegliwości bólowe
+                            (barki, plecy).</li>
+                        <li>Dowiesz się kiedy można zastosować bańki, oraz jakie są przeciwwskazania do ich stosowania.
+                        </li>
+
+                    </ol>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__info-box">
+
+                        <div class="trainings-main__schedule">
+                            <h3 class="h3-title-subsections">Harmonogram</h3>
+                            <p class="trainings-main__content-without-space">Godziny: 10.00 – 15.00 lub 15.30</p>
+                            <p class="trainings-main__content-without-space">(5h zajęć z krótkimi przerwami)</p>
+
+                        </div>
+
+                        <div class="trainings-main__location">
+                            <h3 class="h3-title-subsections">Lokalizacja</h3>
+                            <p class="trainings-main__content-without-space trainings-main__addres">
+                                <span>Gabinet Akupunktury Michalina Marciniak</span>
+                                <span>ul. ks. dr B. Domańskiego 14A (1 piętro)</span>
+                                <span>77-400 Złotów</span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__price">
+                        <h3 class="h3-title-subsections">cena</h3>
+                        <p class="trainings-main__content-without-space">Koszt kursu: 400zł</p>
+                        <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia
+                            zawiera materiały szkoleniowe: skrypt do zajęć, przekąski, oraz napoje ciepłe i zimne.
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                        </p>
+                    </div>
+
+                    <span
+                        class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
+
+                    <p class="trainings-main__text">Grupa: 6 osób, ćwiczymy w małej kameralnej grupie.
+                    </p>
+                </div>
+
+
+
+
+                <div class="trainings-main__box">
+                    <h2 class="trainings-main__title">Zapraszam serdecznie na praktyczny warsztat moksoterapii!
+                    </h2>
+
+                    <p class="trainings-main__text trainings-main__text-without-space">Moksa to suszone zioło bylicy
+                        chińskiej które służy do moksoterapii czyli terapii ciepłem. Jest to zabieg polegający na
+                        stymulacji określonych punktów akupunkturowych przy pomocy ciepła wytwarzanego przez palącą się
+                        moksę. Moksa od wieków stosowana jest do leczenia ciepłem. Ogrzewanie odpowiednich punktów jest
+                        jednym z najlepszych sposobów leczenia różnego rodzaju bólu, przy ogólnym osłabieniu organizmu
+                        oraz w stanach przewlekłych.
+                        Podczas zabiegu, w efekcie spalania bylicy, ziołowe właściwości moksy działają stymulująco na
+                        przepływ energii wzmacniając i ogrzewając organizm. Do zabiegów można wykorzystywać moksę, która
+                        występuje w kilku formach: stożki, cygara lub moksa bezdymna. Efektem zabiegu jest ogrzanie
+                        organizmu lub konkretnego obszaru, pobudzenie przepływu krwi i energii, a także usunięcie
+                        zastojów.
+
+                    </p>
+
+                    <p class="trainings-main__text">Według najnowszych badań stosowanie moksy ma korzystny wpływ na
+                        układ odpornościowy, układ krążenia i profil lipidowy. Ogrzewanie może być też stosowane w celu
+                        osiągnięcia efektu przeciwbólowego.
+                        Żyjemy w klimacie, w którym przez większą część roku bywa chłodno i wilgotno. Więc idealnie
+                        wpisuje się u nas moksowanie, które dodaje energii ciepła, porusza i wzmacnia organizm.
+                    </p>
+
+                    <span class="trainings-main__break-line"></span>
+
+                    <h3 class="h3-title-subsections">Program kursu</h3>
+
+                    <h4 class="trainings-main__h4">Podczas szkolenia dowiesz się:</h4>
+                    <ol class="trainings-main__ul-list">
+                        <li>Co to jest moksa.</li>
+                        <li>Jakie są rodzaje moksy, kiedy je wykorzystujemy.</li>
+                        <li>Jak zastosować moksę do autoterapii na wiele powszechnych i codziennych dolegliwości:
+                            przeziębienie, infekcja, wzmocnienie po chorobie, ogrzanie organizmu, bóle w ciele.</li>
+                        <li>Nauczysz się moksowania podstawowych punktów akupunktury, które możemy wykorzystać do
+                            wzmacniania organizmu i profilaktyki chorób.</li>
+                        <li>Dowiesz się kiedy można zastosować moksę, oraz jakie są przeciwwskazania do jej
+                            zastosowania.</li>
+                    </ol>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__info-box">
+
+                        <div class="trainings-main__schedule">
+                            <h3 class="h3-title-subsections">Harmonogram</h3>
+                            <p class="trainings-main__content-without-space">Godziny: 10.00 – 17.00 </p>
+                            <p class="trainings-main__content-without-space">(w tym 1 - 1,5h przerwy obiadowej)</p>
+
+                        </div>
+
+                        <div class="trainings-main__location">
+                            <h3 class="h3-title-subsections">Lokalizacja</h3>
+                            <p class="trainings-main__content-without-space trainings-main__addres">
+                                <span>Gabinet Akupunktury Michalina Marciniak</span>
+                                <span>ul. ks. dr B. Domańskiego 14A (1 piętro)</span>
+                                <span>77-400 Złotów</span>
+                            </p>
+                        </div>
+                    </div>
+
+                    <span class="trainings-main__break-line trainings-main__break-line-space-top"></span>
+
+                    <div class="trainings-main__price">
+                        <h3 class="h3-title-subsections">cena</h3>
+                        <p class="trainings-main__content-without-space">Koszt kursu: 550zł</p>
+                        <p class="trainings-main__content-without-space trainings-main__content-italic">Cena szkolenia zawiera wszystkie materiały szkoleniowe: skrypt do zajęć, moksę i potrzebne akcesoria, dodatkowo obiad, który zjemy na miejscu, przekąski, oraz napoje ciepłe i zimne.
+                            <span class="trainings-main__certificate">Każdy uczestnik otrzyma imienny certyfikat</span>
+                        </p>
+
+                    </div>
+
+                    <span
+                        class="trainings-main__break-line trainings-main__break-line-space-top trainings-main__break-line-space-top-bottom"></span>
+                    <p class="trainings-main__text">Grupa: 6 – 8 osób, ćwiczymy w małej kameralnej grupie.
+                    </p>
+                </div>
+
+
+
+
+
             </div>
 
+            <div>
+                <img src="dist/img/trainings.png" class="trainings-main__img"
+                    alt="Michalina Marciniak, Akupunktura Złotów">
+            </div>
+
+
         </div>
+
+        <img src="dist/img/trainings.png" class="trainings-main__img-mobile"
+                    alt="Michalina Marciniak, Akupunktura Złotów">
     </div>
 
 
